--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "google-auth-library": "^8.7.0",
     "mongoose": "^6.8.1",
     "nodemon": "^2.0.20",
     "slugify": "^1.6.5"
