--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/backendtest
+MONGO_URI=mongodb://rahul:rahul@123@ac-wbtf223-shard-00-00.jvwsmdg.mongodb.net:27017,ac-wbtf223-shard-00-01.jvwsmdg.mongodb.net:27017,ac-wbtf223-shard-00-02.jvwsmdg.mongodb.net:27017/prastuti2023?ssl=true&replicaSet=atlas-s30ciu-shard-0&authSource=admin&retryWrites=true&w=majority
 GOOGLE_CLIENT_ID=134310782555-uh34p2qnfu3q4p8u8puinsmpn251org0.apps.googleusercontent.com
 GOOGLE_SECRET_KEY=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
