--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://rahul:rahul123321@ac-p0mqc4t-shard-00-00.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-01.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-02.0qhpt2z.mongodb.net:27017/prastuti?ssl=true&replicaSet=atlas-r0o5am-shard-0&authSource=admin&retryWrites=true&w=majority
+MONGO_URI=mongodb://rahul:rahul123321@ac-p0mqc4t-shard-00-00.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-01.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-02.0qhpt2z.mongodb.net:27017/Prastuti2023?ssl=true&replicaSet=atlas-r0o5am-shard-0&authSource=admin&retryWrites=true&w=majority
 # MONGO_URI=mongodb://localhost:27017/backendtest
 GOOGLE_CLIENT_ID=134310782555-uh34p2qnfu3q4p8u8puinsmpn251org0.apps.googleusercontent.com
 GOOGLE_SECRET_KEY=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
