--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGO_URI=mongodb://rahul:rahul123321@ac-p0mqc4t-shard-00-00.0qhpt2z.mongodb.net
 # MONGO_URI=mongodb://localhost:27017/backendtest
 GOOGLE_CLIENT_ID=134310782555-uh34p2qnfu3q4p8u8puinsmpn251org0.apps.googleusercontent.com
 GOOGLE_SECRET_KEY=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
+ONE_SIGNAL_APP_ID = "8396a3f0-5f9f-442e-9712-84485851fefe"
+ONE_SIGNAL_API_KEY = "MzA5NTQ5YzgtNGMzNS00MWViLWIyMWMtYTViNzMyNTRmMDk3"
