--- a/.env
+++ b/.env
@@ -1,4 +1,14 @@
-MONGO_URI=mongodb://rahul:rahul123321@ac-p0mqc4t-shard-00-00.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-01.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-02.0qhpt2z.mongodb.net:27017/Prastuti2023?ssl=true&replicaSet=atlas-r0o5am-shard-0&authSource=admin&retryWrites=true&w=majority
+# MONGO_URI=mongodb://rahul:rahul123321@ac-p0mqc4t-shard-00-00.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-01.0qhpt2z.mongodb.net:27017,ac-p0mqc4t-shard-00-02.0qhpt2z.mongodb.net:27017/Prastuti2023?ssl=true&replicaSet=atlas-r0o5am-shard-0&authSource=admin&retryWrites=true&w=majority
+# # MONGO_URI=mongodb://localhost:27017/backendtest
+# # GOOGLE_CLIENT_ID=134310782555-uh34p2qnfu3q4p8u8puinsmpn251org0.apps.googleusercontent.com
+# # GOOGLE_SECRET_KEY=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
+# ONE_SIGNAL_APP_ID = "8396a3f0-5f9f-442e-9712-84485851fefe"
+# ONE_SIGNAL_API_KEY = "MzA5NTQ5YzgtNGMzNS00MWViLWIyMWMtYTViNzMyNTRmMDk3"
+# GOOGLE_CLIENT_ID=937290168286-p8j5k4duggqbt26ocb6ich1afr6dmmr0.apps.googleusercontent.com
+# GOOGLE_SECRET_KEY=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
+
+
+MONGO_URI=mongodb://prastuti:techteam23@ac-aaeytwt-shard-00-00.xfqqgbm.mongodb.net:27017,ac-aaeytwt-shard-00-01.xfqqgbm.mongodb.net:27017,ac-aaeytwt-shard-00-02.xfqqgbm.mongodb.net:27017/?ssl=true&replicaSet=atlas-xk7lpi-shard-0&authSource=admin&retryWrites=true&w=majority
 # MONGO_URI=mongodb://localhost:27017/backendtest
 # GOOGLE_CLIENT_ID=134310782555-uh34p2qnfu3q4p8u8puinsmpn251org0.apps.googleusercontent.com
 # GOOGLE_SECRET_KEY=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
